force-app/main/default/objects/fferpcore__TaxRate__c/fferpcore__TaxRate__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__TaxRateHelp</customHelpPage>
    <label>Tax Rate</label>
    <nameField>
        <displayFormat>T-{000}</displayFormat>
        <label>Tax Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>