force-app/main/default/objects/fferpcore__TaxRate__c/fields/fferpcore__Rate__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Rate__c</fullName>
    <defaultValue>0.000</defaultValue>
    <label>Rate</label>
    <precision>7</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>